--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "version": "0.0.0",
+  "license": "SEE LICENSE IN UNLICENSE",
   "scripts": {
     "clean:pages": "rm -rf src/pages/*",
     "eleventy:watch": "eleventy --watch",
     "eleventy:build": "eleventy",
-    "dev": "concurrently npm:dev:*",
+    "dev": "concurrently yarn:dev:*",
     "dev:eleventy": "eleventy --watch",
     "dev:vite": "vite",
     "build": "yarn build:eleventy && yarn build:vite",
@@ -13,13 +14,11 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@marlonmarcello/vite-plugin-pug": "^1.0.3",
     "@types/elm": "^0.19.0",
     "@types/node": "^15.12.5",
     "concurrently": "^6.2.0",
     "typescript": "^4.3.2",
     "vite": "^2.3.8",
-    "vite-plugin-pug": "^0.3.0",
     "windicss": "^3.1.3"
   },
   "dependencies": {
