--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
     "build": "yarn build:eleventy && yarn build:vite",
     "build:eleventy": "eleventy",
     "build:vite": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "node scripts/deploy.js"
   },
   "devDependencies": {
     "@types/elm": "^0.19.0",
     "@types/node": "^15.12.5",
     "concurrently": "^6.2.0",
-    "typescript": "^4.3.2",
+    "string-argv": "^0.3.1",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4",
     "vite": "^2.3.8",
-    "windicss": "^3.1.3"
+    "windicss": "^3.1.3",
+    "yaml": "^1.10.2"
   },
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "dotenv": "^10.0.0",
     "fast-glob": "^3.2.6",
+    "simple-git": "^2.40.0",
     "vite-plugin-elm": "^2.4.0",
     "vite-plugin-windicss": "^1.1.1"
   }
