--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "clean:pages": "rm -rf src/pages/*",
     "eleventy:watch": "eleventy --watch",
     "eleventy:build": "eleventy",
-    "dev": "concurrently yarn:dev:*",
+    "dev": "yarn clean:pages && concurrently yarn:dev:*",
     "dev:eleventy": "eleventy --watch",
     "dev:vite": "vite",
     "build": "yarn build:eleventy && yarn build:vite",
@@ -14,23 +14,24 @@
     "serve": "vite preview",
     "deploy": "node scripts/deploy.js"
   },
-  "devDependencies": {
-    "@types/elm": "^0.19.0",
-    "@types/node": "^15.12.5",
-    "concurrently": "^6.2.0",
-    "string-argv": "^0.3.1",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.4",
-    "vite": "^2.3.8",
-    "windicss": "^3.1.3",
-    "yaml": "^1.10.2"
-  },
   "dependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "dotenv": "^10.0.0",
-    "fast-glob": "^3.2.6",
-    "simple-git": "^2.40.0",
+    "yaml": "^1.10.2",
+    "windicss": "^3.1.3",
+    "vue": "^3.2.4",
+    "vite": "^2.3.8",
+    "vite-plugin-windicss": "^1.1.1",
     "vite-plugin-elm": "^2.4.0",
-    "vite-plugin-windicss": "^1.1.1"
+    "typescript": "^4.3.4",
+    "ts-node": "^10.0.0",
+    "string-argv": "^0.3.1",
+    "simple-git": "^2.40.0",
+    "fast-glob": "^3.2.6",
+    "dotenv": "^10.0.0",
+    "concurrently": "^6.2.0",
+    "@vue/compiler-sfc": "^3.2.4",
+    "@vitejs/plugin-vue": "^1.4.0",
+    "@types/node": "^15.12.5",
+    "@types/elm": "^0.19.0",
+    "@11ty/eleventy": "^0.12.1"
   }
 }
